<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_general">

        <Preference
            app:key="notification_access"
            app:title="@string/pref_notification_access_title"
            app:summary="@string/pref_notification_access_summary"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="capture_enabled"
            app:title="@string/pref_capture_enabled_title"
            app:summary="@string/pref_capture_enabled_summary"
            app:defaultValue="true"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="qs_tile_enabled"
            app:title="@string/pref_qs_tile_title"
            app:summary="@string/pref_qs_tile_summary"
            app:defaultValue="true"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="app_language"
            app:title="@string/pref_language_title"
            app:summary="@string/pref_language_summary"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="system"
            app:iconSpaceReserved="false" />

        <ListPreference
            app:key="theme_color"
            app:title="@string/pref_theme_color_title"
            app:summary="@string/pref_theme_color_summary"
            app:entries="@array/theme_color_entries"
            app:entryValues="@array/theme_color_values"
            app:defaultValue="grey"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="pitch_black"
            app:title="@string/pref_pitch_black_title"
            app:summary="@string/pref_pitch_black_summary"
            app:defaultValue="false"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="biometric_lock"
            app:title="@string/pref_biometric_lock_title"
            app:summary="@string/pref_biometric_lock_summary"
            app:defaultValue="false"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="widget_filter_auth"
            app:title="@string/pref_widget_filter_auth_title"
            app:summary="@string/pref_widget_filter_auth_summary"
            app:defaultValue="false"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="flag_secure"
            app:title="@string/pref_flag_secure_title"
            app:summary="@string/pref_flag_secure_summary"
            app:defaultValue="true"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="show_read_unread_status"
            app:title="@string/pref_show_read_unread_title"
            app:summary="@string/pref_show_read_unread_summary"
            app:defaultValue="false"
            app:widgetLayout="@layout/custom_preference_switch"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="favorites_list"
            app:title="@string/pref_favorites_title"
            app:summary="@string/pref_favorites_summary"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="pin_shortcuts"
            app:title="@string/pref_pin_shortcuts_title"
            app:summary="@string/pref_pin_shortcuts_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_storage">

        <Preference
            app:key="auto_delete_history"
            app:title="@string/pref_auto_delete_title"
            app:summary="@string/pref_auto_delete_summary"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="export_backup"
            app:title="@string/pref_export_backup_title"
            app:summary="@string/pref_export_backup_summary"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="import_backup"
            app:title="@string/pref_import_backup_title"
            app:summary="@string/pref_import_backup_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_rules">

        <Preference
            app:key="app_rules"
            app:title="@string/pref_app_rules_title"
            app:summary="@string/pref_app_rules_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_about">

        <Preference
            app:key="about"
            app:title="@string/pref_about_title"
            app:summary="@string/pref_about_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
