<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step1"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step1"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step2"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step2"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step3"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step3"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step4"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step4"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step5"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step5"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step6"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step6"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_instruction_step7"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/instruction_step7"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:clipToOutline="true"/>

     </LinearLayout>
</ScrollView>
